# Etsy_Seller_Copilot

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/etsy_seller_copilot/agents/: __init__.py  analyst_tools.py  business_analyst.py  graph.py  health_report.py  nodes.py  prompts.py  state.py  tools.py
src/etsy_seller_copilot/analytics/: __init__.py  health.py  metrics.py
src/etsy_seller_copilot/config/: __init__.py  llm.py
src/etsy_seller_copilot/data/: __init__.py  loaders.py  utils.py
src/etsy_seller_copilot/services/: __init__.py  dispatcher.py  intent.py  planner.py
src/etsy_seller_copilot/ui/: app.py  charts.py  components.py
tests/: test_agents_analyst_tools.py  test_agents_business_analyst.py  test_agents_graph.py  test_agents_health_report.py  test_agents_nodes.py  test_agents_prompts.py  test_agents_tools.py  test_analytics_health.py  test_analytics_metrics.py  test_config_llm.py  test_data_loaders.py  test_data_utils.py  test_services_answer.py  test_services_dispatcher.py  test_services_intent.py  test_services_planner.py  test_ui_charts.py
