[project]
name = "etsy-seller-copilot"
version = "0.1.0"
description = "AI copilot that helps Etsy sellers manage and grow their shops"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.11",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=1.2.7",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/etsy_seller_copilot"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
